# MetaStruct

./: .gitignore  LICENSE  MANIFEST.in  README.md  cuda_test.py  implicitCAD.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml
Examples/: LatticeBracket.py  LatticeRefinement.py  LatticeRings.py  LatticeSphere.py  LeosRings.py
Functions/: ModifierArray.py  Remap.py
MetaStruct/: imported_mesh_test.py  main.py
MetaStruct/Examples/: LatticeBracket.py  LatticeRefinement.py  LatticeRings.py  LatticeSphere.py
MetaStruct/Functions/: ModifierArray.py  Remap.py
MetaStruct/Objects/: DesignSpace.py  Geometry.py
MetaStruct/Objects/Lattices/: BCC.py  CompositeLatticeSurface.py  Diamond.py  DiamondNetwork.py  (+10 more)
Objects/: DesignSpace.py  Geometry.py
Objects/Booleans/: Add.py  Blend.py  Boolean.py  Difference.py  Divide.py  Intersection.py  Multiply.py  SmoothUnion.py  Subtract.py  Union.py
Objects/Lattices/: BCC.py  CompositeLatticeSurface.py  Diamond.py  DiamondNetwork.py  DiamondSurface.py  DoubleGyroidNetwork.py  Gyroid.py  GyroidNetwork.py  GyroidSurface.py  Lattice.py  Primitive.py  PrimitiveNetwork.py  PrimitiveSurface.py  SquareLattice.py  StrutLattice.py
Objects/Misc/: Noise.py  Pattern.py  PerlinNoise.py
Objects/Points/: PointClouds.py
Objects/Shapes/: Cube.py  Cuboid.py  Cylinder.py  HollowCube.py  HollowSphere.py  ImportedMesh.py  ImportedShape.py  Line.py  Shape.py  Sphere.py  Spheroid.py  Torus.py
P19045/: lattice_slab.py
src/MetaStruct/: __init__.py  clamp.pyx  imported_mesh_test.py  line_test.py  main.py  vector_multiply.pyx  vector_subtract.pyx  voronoi_test.py
(+69 files in other folders)
