[metadata]
name = MetaStruct
version = 1.0.0
description = This package is a basic implicit geometry tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wilko339/MetaStruct.git
author = Toby Wilkinson
author_email = toby.wilkinson339@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:

[options.packages.find]
exclude =
    test*
    testing*

[options.entry_points]
console_scripts =
    MetaStruct-cli = MetaStruct.main:main
