[metadata]
name = metastruct
version = 0.0.1
description = This package is a basic implicit geometry tool.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wilko339/MetaStruct.git
author = Toby Wilkinson
author_email = toby.wilkinson339@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
package_dir =
     = src
packages = find:
python_requires=>=3.7
install_requires =
    numpy>=1.7
    scikit-learn
    scikit-image
    numexpr
    pyqt5
    vtk
    mayavi
    progressbar
    smt


[options.packages.find]
where = src
exclude =
    test*
    testing*

[options.entry_points]
console_scripts =
    MetaStruct-cli = MetaStruct.main:main

[bdist_wheel]
universal = True
